--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.0.1",
     "react-scroll": "^1.8.8",
     "react-timer-hook": "^3.0.5",
